# StreamNova_Core_Analytics_Pipeline

./: .gitignore  README.md  main.py  pyproject.toml
csv_generator/: generate_source_csv.py
csv_generator/dev_data/: content_consumption.csv  customers.csv  payments.csv  subscriptions.csv
streamnova_core_dbt/: .user.yml  dbt_project.yml  profiles_template.yml
streamnova_core_dbt/models/bronze/: bronze_content_consumption.sql  bronze_customers.sql  bronze_payments.sql  bronze_subscriptions.sql  properties.yml
streamnova_core_dbt/models/source/: sources.yml
