[project]
name = "streamnova-core-analytics-pipeline-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.6",
    "dbt-databricks>=1.11.6",
    "faker>=40.11.0",
    "numpy>=2.4.3",
    "pandas>=2.2.3",
]
